Fix attempt #2 for mountain hitbox on iOS

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -707,6 +707,7 @@
     position:relative;
     height:100%; width:100%;
     animation:none;
+    pointer-events:none;
 }
 #smallMountain.bubbleExperience .mountainRotater {
     pointer-events:all;
